[package]
name = "mio-multithread"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
env_logger = "0.3"
httparse = "1.1.2"
slab = "0.1"
log = "0.3"
net2 = "0.2"
num_cpus = "0.2"
time = "0.1"

# As of 2016-07-19 Poll isn't Sync, so let's just pray that it is!
mio = { git = "https://github.com/alexcrichton/mio", branch = "poll-sync" }
